tests/fixtures/errors/stringview_copy.z
# a view has no .copy: views copy by assignment; .string is the explicit,
# visibly-allocating conversion to an owned String

main: function is {
    sv: "hello"
    bad: sv.copy
    print bad
}
